narrow the course select drop down to avoid wrapping

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -76,7 +76,7 @@ div#userinfo {
   border-radius: 5px;
   height: 64px;
   display: block;
-  min-width: 275px;
+  min-width: 350px;
 }
 
 div#userinfo .loginInfo {
